--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@nuxt/eslint": "1.5.2",
     "@nuxt/test-utils": "3.19.2",
     "@nuxtjs/i18n": "9.5.6",
     "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@supabase/supabase-js": "^2.50.3",
     "@vee-validate/zod": "^4.15.1",
-    "eslint": "^9.0.0",
     "nuxt": "^4.0.0-alpha.4",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "zod": "^3.25.75"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "1.5.2",
+    "eslint": "^9.30.1",
+    "typescript": "^5.8.3"
   }
 }
