--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@nuxt/test-utils": "3.19.2",
     "@nuxtjs/i18n": "9.5.6",
     "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@supabase/supabase-js": "^2.50.3",
+    "@tanstack/vue-query": "^5.81.5",
     "@vee-validate/zod": "^4.15.1",
     "nuxt": "^4.0.0-alpha.4",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
-    "zod": "^3.25.75"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@nuxt/eslint": "1.5.2",
