--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "nuxt-app",
+  "name": "kidpoints",
+  "version": "0.1.0",
+  "description": "Application Nuxt 4 avec Supabase pour gérer les tâches, points et niveaux des enfants",
   "type": "module",
   "private": true,
+  "author": "Alexis Lapasset <alexis.lapasset@example.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Family-Quest/KidsPoints.git"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
