--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kidpoints",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Application Nuxt 4 avec Supabase pour gérer les tâches, points et niveaux des enfants",
   "type": "module",
   "private": true,
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Family-Quest/KidsPoints.git"
+    "url": "https://github.com/Family-Quest/KidPoints.git"
   },
   "scripts": {
     "build": "nuxt build",
@@ -25,10 +25,10 @@
     "@nuxtjs/i18n": "9.5.6",
     "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/tailwindcss": "6.14.0",
-    "@supabase/supabase-js": "^2.50.3",
-    "@tanstack/vue-query": "^5.81.5",
+    "@supabase/supabase-js": "^2.50.4",
+    "@tanstack/vue-query": "^5.82.0",
     "@vee-validate/zod": "^4.15.1",
-    "nuxt": "^4.0.0-alpha.4",
+    "nuxt": "4.0.0-rc.0",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
