--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kidpoints",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Application Nuxt 4 avec Supabase pour gérer les tâches, points et niveaux des enfants",
   "type": "module",
   "private": true,
@@ -16,8 +16,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint . --ext .js,.ts,.vue",
+    "lint:fix": "eslint . --fix --ext .js,.ts,.vue"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -25,10 +25,14 @@
     "@nuxtjs/i18n": "9.5.6",
     "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/tailwindcss": "6.14.0",
-    "@supabase/supabase-js": "^2.50.4",
-    "@tanstack/vue-query": "^5.82.0",
+    "@pinia/nuxt": "0.11.1",
+    "@supabase/supabase-js": "^2.50.5",
+    "@tanstack/vue-query": "^5.83.0",
     "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^13.5.0",
+    "@vueuse/nuxt": "13.5.0",
     "nuxt": "4.0.0-rc.0",
+    "pinia": "^3.0.3",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
@@ -36,7 +40,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "1.5.2",
-    "eslint": "^9.30.1",
+    "eslint": "^9.31.0",
     "typescript": "^5.8.3"
   }
 }
