--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kidpoints",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "description": "Application Nuxt 4 avec Supabase pour gérer les tâches, points et niveaux des enfants",
   "type": "module",
   "private": true,
@@ -26,8 +26,9 @@
     "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "0.11.1",
-    "@supabase/supabase-js": "^2.50.5",
+    "@supabase/supabase-js": "^2.51.0",
     "@tanstack/vue-query": "^5.83.0",
+    "@tanstack/vue-query-devtools": "^5.83.0",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.5.0",
     "@vueuse/nuxt": "13.5.0",
@@ -36,11 +37,17 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@nuxt/eslint": "1.5.2",
     "eslint": "^9.31.0",
     "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@vue/devtools-api": "7.7.7"
+    }
   }
 }
